--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -36,11 +36,11 @@ jobs:
       - name: Build with npm
         run: |
           npm install
-          npm run build
+          npm run build -- --base=ci-graph
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: dist/
+          path: ./dist
 
   # Deployment job
   deploy:
