--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
-	"name": "react-vite-ts",
-	"private": true,
-	"version": "0.0.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc && vite build",
-		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview"
-	},
-	"dependencies": {
-		"@viz-js/viz": "3.7.0",
-		"prism-react-editor": "^2.1.0",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"yaml": "2.5.0"
-	},
-	"devDependencies": {
-		"@types/react": "^18.2.65",
-		"@types/react-dom": "^18.2.21",
-		"@typescript-eslint/eslint-plugin": "^7.2.0",
-		"@typescript-eslint/parser": "^7.2.0",
-		"@vitejs/plugin-react": "^4.2.1",
-		"eslint": "^8.57.0",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-react-refresh": "^0.4.5",
-		"typescript": "^5.4.2",
-		"vite": "^5.1.6"
-	}
+  "name": "react-vite-ts",
+  "private": true,
+  "version": "0.1.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@sentry/react": "^10.10.0",
+    "@viz-js/viz": "3.7.0",
+    "prism-react-editor": "^2.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "yaml": "2.5.0"
+  },
+  "devDependencies": {
+    "@types/node": "^24.3.1",
+    "@types/react": "^18.2.65",
+    "@types/react-dom": "^18.2.21",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "typescript": "^5.4.2",
+    "vite": "^5.1.6"
+  }
 }
