--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -4,9 +4,12 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: ["main"]
-
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+
+# Environment variables
+env:
+  VITE_SENTRY_DSN: ${{ vars.VITE_SENTRY_DSN }}
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
