--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@sentry/react": "^10.10.0",
     "@viz-js/viz": "3.7.0",
+    "axios": "^1.8.2",
     "prism-react-editor": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
